welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: not found: value LookingFor
    if (LookingFor==nums(i)){
        ^